section5/manifest/ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: app
  labels:
    ns: app
---
kind: Namespace
apiVersion: v1
metadata:
  name: analysis
  labels:
    ns: analysis
