section5/manifest/pod-analysis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: analysis
  labels:
    name: analysis
spec:
  containers:
    - name: analysis
      image: nginx:latest
