section5/manifest/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  ingress: []
  egress: []
  policyTypes:
    - Ingress
    - Egress
