section5/manifest/ns-podSelector.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ns-pod-selector-egress
  namespace: analysis
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              ns: app
          podSelector:
            matchLabels:
              app: api
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ns-pod-selector-ingress
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              ns: analysis
